assets/css/testing.css
/* ... */
.toggle-label input[type=checkbox]+.back .toggle {
    display: block;
    position: absolute;
    content: ' ';
    background: transparent;
    width: 50%;
    height: 100%;
    transition: margin .5s linear;
    /* border: 1px solid #808080; */
    border-radius: 0;
    background: linear-gradient(90deg, rgba(201, 50, 55, 1) 0%, rgba(126, 21, 24, 1) 100%);
    border-radius: 30px;
    height: 85%;
    left: 3px;
    top: auto;
    bottom: auto;
}

.toggle-label input[type=checkbox]:checked+.back .toggle {
    margin-left: 143px;
}

.toggle-label .label {
    display: block;
    position: absolute;
    width: 50%;
    color: #ddd;
    /* vertical-align: middle; */
    text-align: center;
    font-size: 1em;
    border-radius: 30px;
}

.toggle-label .label.on {
    left: 0px;
}

.toggle-label .label.off {
    right: 0px;
}

.toggle-label input[type=checkbox]+.back .label.off,
.toggle-label input[type=checkbox]:checked+.back .label.on {
    color: #C43438;
}

.toggle-label input[type=checkbox]:checked+.back .label.off,
.toggle-label input[type=checkbox]+.back .label.on {
    color: #fff;
}

.z-1021 {
    z-index: 1021 !important;
}

.z-1022 {
    z-index: 1022 !important;
}

.size-60px {
    max-height: 70px !important;
    max-width: 60px !important;
}

.transition-okay {
    transition: .5s ease-in-out;
}

.core_heading_h3 {
    /* font-size: 28px; */
    font-size: calc(22px + (28 - 22) * ((100vw - 1280px) / (1920 - 1280)));
}

.core_heading_h5 {
    /* font-size: 20px; */
    font-size: calc(16px + (20 - 16) * ((100vw - 1280px) / (1920 - 1280)));
}

html.no-scroll {
    overflow: hidden;
}

::-webkit-scrollbar {
    display: none;
}

#pinContainer {
    width: 100%;
    height: 100%;
    overflow: hidden;
}

.panel {
    height: 100%;
    width: 100%;
    position: absolute;
}

.test_div {
    height: 1890px;
}

.opacity-0 {
    opacity: 0;
}
/* 
.Desktop_comparison_section {
    height: 655px !important;
    width: 375px !important;
} */

.customer_hero_section,
.height-945px {
    height: 945px;
}

.red_border .col-xl-6:after {
    position: absolute;
    /* z-index: -1; */
    /* top: 10%; */
    /* right: -5px; */
    width: 100%;
    height: 100%;
    content: '';
   background: #C43438 !important;
}
.red_border .col-xl-6:before {
    position: absolute;
    /* z-index: -1; */
    /* top: 10%; */
    /* right: -5px; */
    width: 100%;
    height: 50px;
    background: linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
    content: '';
    background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
    background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
    background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=0 );
}

